- fixed margin and paddings so everything fits on mobile view

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
   color: var(--White);
-  height: 100vh;
+  min-height: 100dvh;
   font-family: var(--font-family);
   background-color: var(--Red-400);
   background-image: url(images/bg-intro-mobile.png);
@@ -103,6 +103,7 @@ h6 {
 .attribution {
   font-size: 0.6875rem;
   text-align: center;
+  padding-top: 0;
 }
 
 .attribution a {
@@ -115,14 +116,15 @@ h6 {
   text-align: center;
   font-size: var(--font-size);
   font-weight: normal;
-  padding: 1.5rem 0;
+  padding: 0.75rem 0 0 0;
 }
 
 .product-title {
   line-height: 1.25;
   font-weight: var(--fw-600);
-  font-size: 1.75rem;
-  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
+  margin-top: 0;
 }
 
 .product {
@@ -132,8 +134,8 @@ h6 {
 
 .promotion {
   background-color: var(--Purple-700);
-  margin: 0.5rem 2rem;
-  padding: 1rem 1rem;
+  margin: 0.5rem 1.5rem;
+  padding: 0.75rem 1rem;
   border-radius: 12px;
   box-shadow: 0 10px 12px rgb(0 0 0 / 0.5);
 }
@@ -144,10 +146,10 @@ h6 {
 
 .form {
   background-color: var(--White);
-  margin: 0.5rem 2rem;
+  margin: 0.5rem 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.75rem;
   padding: 1rem;
   border-radius: 12px;
   align-items: space-evenly;
@@ -164,7 +166,7 @@ h6 {
   background-color: var(--Green-400);
   border: none;
   border-radius: 7px;
-  padding: 1rem 1rem;
+  padding: 0.75rem 1rem;
   text-transform: uppercase;
 }
 
